# FireExplorer

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt  server.py  tools.py
templates/: 404.html  index.html
templates/assets/css/: 404.css  index.css
